syntax = "proto3";

package whatsapp.chat;

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "WhatsApp.Web.Chats.Grpc.Protos.Chat";


service Chat {
  rpc PushMessageToUser (NewMessageRequest) returns (MessageResponse);
  rpc PushMessageToGroup (NewGroupMessageRequest) returns (MessageResponse);
  rpc CreateGroup (CreateGroupRequest) returns (MessageResponse);
  rpc JoinGroup (JoinGroupRequest) returns (MessageResponse);
  rpc LeaveGroup (LeaveGroupRequest) returns (MessageResponse);
  rpc UserChats (UserChatRequest) returns (UserChatResponse);
  rpc GetMessages (GetMessagesRequest) returns (MessageListResponse);
}

message CreateGroupRequest {
  string group_name = 1;
  string created_by = 2;
  repeated string users = 3;
}


message JoinGroupRequest {
  string user_id = 1;
  string channel_id = 2;
}

message LeaveGroupRequest {
  string user_id = 1;
  string channel_id = 2;
}

message GetMessagesRequest {
  int32 page_number = 1;
  int32 page_size = 2;
  string channel_id = 3;
}

message MessageListResponse {
  repeated MessageContentResponse message_content = 1;
  int32 page_number = 2;
  int32 page_size = 3;
  int32 total_pages = 4;
}

message MessageContentResponse {
  UserInfo user_info = 1;
  MessageInfo message_info = 2;
}

message UserInfo {
  string full_name = 1;
  string profile_image = 2;
}

message MessageInfo {
  MessageType message_type = 5;
  string full_name = 6;
  string content = 7;
  repeated string media_url = 8;
  google.protobuf.Timestamp sent_at = 9;
  google.protobuf.Timestamp delivered_at = 10;
  google.protobuf.Timestamp seen_at = 11;
}

message NewMessageRequest {
  string from_user_id = 1;
  string to_user_id = 2;
  MessageType message_type = 5;
  string full_name = 6;
  string content = 7;
  repeated string media_url = 8;
  google.protobuf.Timestamp sent_at = 9;
  google.protobuf.Timestamp delivered_at = 10;
  google.protobuf.Timestamp seen_at = 11;
  string chat_channel_id = 12;
}

message NewGroupMessageRequest {
  string from_user_id = 1;
  string to_user_id = 2;
  MessageType message_type = 5;
  string full_name = 6;
  string content = 7;
  repeated string media_url = 8;
  google.protobuf.Timestamp sent_at = 9;
  google.protobuf.Timestamp delivered_at = 10;
  google.protobuf.Timestamp seen_at = 11;
  string chat_channel_id = 12;
}

message UserChatResponse {
  repeated UserChatContentResponse content = 1;
}

message UserChatContentResponse {
  string title = 1;
  google.protobuf.Timestamp sent_at = 2;
  google.protobuf.Timestamp delivered_at = 3;
  google.protobuf.Timestamp seen_at = 4;

}

message UserChatRequest {
  string user_id = 1;

}

message MessageResponse {
  string message = 1;
}

enum MessageType{
  Media = 0;
  Text = 1;
  MediaWithText = 2;
}